botão de trocar o tema estilizado

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Quiz App</title>
 </head>
 <body>
@@ -49,9 +50,9 @@
 
             <button>
                 <div>
-                    <img src="./assets/images/icon-accessibility.svg" alt="ícone do Accessibility">
+                    <img src="./assets/images/icon-accessibility.svg" alt="ícone Accessibility">
                 </div>
-                Accessibility
+                Acessibilidade
             </button>
         </section>
     </main>
