html do header finalizado

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -6,6 +6,28 @@
     <title>Quiz App</title>
 </head>
 <body>
-    
+    <header>
+        <div class="assunto">
+            <div class="assunto_ícone">
+                <img src="../../assets/images/icon-accessibility.svg" alt="ícone da acessibilidade">
+
+            </div>
+            <h1>Acessibilidade</h1>
+        </div>
+
+        <div class="tema">
+            <img src="../../assets/images/icon-sun-dark.svg" alt="ícone de sol">
+            <button>
+                <div></div>
+            </button>
+            <img src="../../assets/images/icon-moon-dark.svg" alt="ícone de lua">
+        </div>
+    </header>
+    <main>
+        <section class="pergunta">
+            <p>Questão 6 de 10</p>
+            <h2></h2>
+        </section>
+    </main>
 </body>
 </html>
