Parte funal das alternativas finalizada e pag finalizada

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </button>
         </section>
     </main>
-    <a href="./pages/quiz/quiz.html"></a>
+    <a href="./pages/quiz/quiz.html">Quiz</a>
     
 </body>
 </html>
