--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -57,10 +57,17 @@
                         <span>C</span>
                         Hyper Text Markup Language
                     </div>
+                </label>
 
-
+                <label for="alternativa_d">
+                    <input type="radio" id="alternativa_d">
+                    <div>
+                        <span>D</span>
+                        Hyper Text Markup Leveler
+                    </div>
                 </label>
             </form>
+            <button>Enviar</button>
 
         </section>
     </main>
