estilização do pag do quiz da metade

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="quiz.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quiz App</title>
 </head>
 <body>
     <header>
         <div class="assunto">
-            <div class="assunto_ícone">
+            <div class="assunto-icone">
                 <img src="../../assets/images/icon-accessibility.svg" alt="ícone da acessibilidade">
 
             </div>
@@ -24,7 +28,7 @@
         </div>
     </header>
     <main>
-        <section class="pergunta">
+        <section class="perguntas">
             <p>Questão 6 de 10</p>
             <h2>Qual o significado de HTML?</h2>
             <div class="barra_progresso">
