--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -39,7 +39,7 @@
         <section class="alternativas">
             <form action="">
                 <label for="alternativa_a">
-                    <input type="radio" id="alternativa_a">
+                    <input type="radio" id="alternativa_a" name="alternativa">
 
                     <div>
                         <span>A</span>
@@ -48,7 +48,7 @@
                 </label>
 
                 <label for="alternativa_b">
-                    <input type="radio" id="alternativa_b">
+                    <input type="radio" id="alternativa_b" name="alternativa">
                     <div>
                         <span>B</span>
                         Hyper Text Marketing Language
@@ -56,7 +56,7 @@
                 </label>
 
                 <label for="alternativa_c">
-                    <input type="radio" id="alternativa_c">
+                    <input type="radio" id="alternativa_c" name="alternativa">
                     <div>
                         <span>C</span>
                         Hyper Text Markup Language
@@ -64,7 +64,7 @@
                 </label>
 
                 <label for="alternativa_d">
-                    <input type="radio" id="alternativa_d">
+                    <input type="radio" id="alternativa_d" name="alternativa">
                     <div>
                         <span>D</span>
                         Hyper Text Markup Leveler
