--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -38,7 +38,7 @@
 
         <section class="alternativas">
             <form action="">
-                <label for="alternativa_a">
+                <label for="alternativa_a" id="correta">
                     <input type="radio" id="alternativa_a" name="alternativa">
 
                     <div>
@@ -47,7 +47,7 @@
                     </div>
                 </label>
 
-                <label for="alternativa_b">
+                <label for="alternativa_b" id="errada">
                     <input type="radio" id="alternativa_b" name="alternativa">
                     <div>
                         <span>B</span>
