ajuste das cores no tema dark

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quiz App</title>
 </head>
-<body>
+<body class="escuro">
     <header>
         <div class="assunto">
             <div class="assunto-icone">
@@ -32,7 +32,7 @@
             <p>Questão 6 de 10</p>
             <h2>Qual o significado de HTML?</h2>
             <div class="barra_progresso">
-
+                <div></div>
             </div>
         </section>
 
