--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section class="boas_vindas">
             <h1>Bem vindo(a) ao <br>
-            <strong>Frontend Quiz</strong>
+            <strong>Frontend Quiz!</strong>
             </h1>
 
             <p>Escolha um assunto para começar.</p>
