ajuste do h2 da pag resultados para o desktop

--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -29,7 +29,7 @@
 
     <main>
         <h2>
-            Quiz completo <br><strong>Sua pontuação...</strong>
+            Quiz completo <br><strong>Seus pontos...</strong>
         </h2>
 
         <section class="pontuacao">
