primeiros ajustes do tema no javascript

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -74,7 +74,7 @@
             <button>Enviar</button>
 
         </section>
-        <a href="../../pages/resultados/resultado.html">resultados/a>
+        <a href="../../pages/resultados/resultado.html">resultados</a>
     </main>
 </body>
 </html>
