alteração dinâmica do assunto pag

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
             <button class="botao_javascript">
                 <div>
-                    <img src="./assets/images/icon-js.svg" alt="ícone do JS">
+                    <img src="./assets/images/icon-javascript.svg" alt="ícone do JS">
                 </div>
                 Javascript
             </button>
 
             <button class="botao_acessibilidade">
                 <div>
-                    <img src="./assets/images/icon-accessibility.svg" alt="ícone Accessibility">
+                    <img src="./assets/images/icon-acessibilidade.svg" alt="ícone Accessibility">
                 </div>
                 Acessibilidade
             </button>
