--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
                 <div>
                     <img src="./assets/images/icon-html.svg" alt="ícone do HTML">
                 </div>
-                HTML
+                <span>HTML</span>
             </button>
            
             <button class="botao_css">
                 <div>
                     <img src="./assets/images/icon-css.svg" alt="ícone do CSS">
                 </div>
-                CSS
+                <span>CSS</span>
             </button>
 
             <button class="botao_javascript">
                 <div>
                     <img src="./assets/images/icon-javascript.svg" alt="ícone do JS">
                 </div>
-                Javascript
+                <span>Javascript</span>
             </button>
 
             <button class="botao_acessibilidade">
                 <div>
-                    <img src="./assets/images/icon-acessibilidade.svg" alt="ícone Accessibility">
+                    <img src="./assets/images/icon-acessibilidade.svg" alt="ícone Accessibilidade">
                 </div>
-                Acessibilidade
+                <span>Acessibilidade</span>
             </button>
         </section>
     </main>
