--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="quiz.css">
-    <script src=".quiz.js" type="module" defer></script>
+    <script src="./quiz.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -13,9 +13,8 @@
 <body>
     <header>
         <div class="assunto">
-            <div class="assunto-icone">
+            <div class="assunto_icone">
                 <img src="" alt="">
-
             </div>
             <h1></h1>
         </div>
@@ -29,53 +28,7 @@
         </div>
     </header>
     <main>
-        <section class="perguntas">
-            <p>Questão 6 de 10</p>
-            <h2>Qual o significado de HTML?</h2>
-            <div class="barra_progresso">
-                <div></div>
-            </div>
-        </section>
-
-        <section class="alternativas">
-            <form action="">
-                <label for="alternativa_a" id="correta">
-                    <input type="radio" id="alternativa_a" name="alternativa">
-
-                    <div>
-                        <span>A</span>
-                        Hyper Trainer Marking Language
-                    </div>
-                </label>
-
-                <label for="alternativa_b" id="errada">
-                    <input type="radio" id="alternativa_b" name="alternativa">
-                    <div>
-                        <span>B</span>
-                        Hyper Text Marketing Language
-                    </div>
-                </label>
-
-                <label for="alternativa_c">
-                    <input type="radio" id="alternativa_c" name="alternativa">
-                    <div>
-                        <span>C</span>
-                        Hyper Text Markup Language
-                    </div>
-                </label>
-
-                <label for="alternativa_d">
-                    <input type="radio" id="alternativa_d" name="alternativa">
-                    <div>
-                        <span>D</span>
-                        Hyper Text Markup Leveler
-                    </div>
-                </label>
-            </form>
-            <button>Enviar</button>
-
-        </section>
-        <a href="../../pages/resultados/resultado.html">resultados</a>
+        
     </main>
 </body>
 </html>
