--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resultado.css">
-    <script src="./resultado.css" type="module" defer ></script>
+    <script src="./resultado.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <title>Quiz App</title>
 </head>
-<body class="escuro">
+
+<body>
     <header>
         <div class="assunto">
             <div class="assunto_icone">
-                <img src="../../assets/images/icon-accessibility.svg" alt="ícone de acessibilidade">
+                <img src="../../assets/images/icon-acessibilidade.svg" alt="ícone de acessibilidade">
             </div>
 
             <h1>Acessibilidade</h1>
@@ -32,20 +35,13 @@
         <h2>
             Quiz completo <br><strong>Seus pontos...</strong>
         </h2>
+        <div>
+            <section class="pontuacao">
+            </section>
 
-        <section class="pontuacao">
-            <div class="assunto">
-                <div class="assunto_icone">
-                    <img src="../../assets/images/icon-accessibility.svg" alt="ícone da acessibilidade">
-                </div>
-                <h1>Acessibilidade</h1>
-            </div>
-
-            <strong>8</strong>
-            <p>de 10</p>
-        </section>
-
-        <button>Jogar novamente</button>
+            <button>Jogar novamente</button>
+        </div>
     </main>
 </body>
+
 </html>
